# shopping_bot

./: Cargo.toml
src/notifier/: mod.rs  telegram.rs
