[package]
name = "costco_observer"
version = "0.1.0"
authors = ["Raphanus Lo <coldturnip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }