[package]
name = "var_shopper"
version = "0.1.0"
authors = ["Raphanus Lo <coldturnip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4"
teloxide = "0.4"
tokio = { version = "1", features = ["full"] }
