[package]
name = "var_shopper"
version = "0.1.0"
authors = ["Raphanus Lo <coldturnip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4"
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "shopper"